app/static/app.css
:root {
    --main-bg-color: white;
}

body {
    background-color: var(--main-bg-color);

    padding: 24px;
    margin: 0;

    font-family: Avenir, Montserrat, Corbel, 'URW Gothic', source-sans-pro, sans-serif;
    font-weight: normal;
}

header {
    display: flex;
    align-items: baseline;
    gap: 6px;

    margin: 24px 0 48px;
}

header h1 {
    margin: 0;
}

section.ratings {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;

    gap: 24px;
}

div.rating {
    position: relative;

    display: block;
    width: 240px;
    height: 240px;
    overflow: hidden;
    box-sizing: border-box;

    box-shadow: rgba(128, 128, 128, 0.3) 0px 6px 8px 0px;
    border-radius: 12px;
}

div.rating img {
    position: absolute;

    width: 100%;
    height: 100%;
    object-fit: cover;

    transition: filter 0.2s ease-in-out;
}

div.rating:hover aside, div.rating:focus aside, div.rating:active aside, div.rating.no_art aside {
    opacity: 1;
}

div.rating:hover img, div.rating:focus img, div.rating:active img, div.rating.no_art img {
    filter: brightness(50%);
}

div.rating aside {
    position: absolute;
    z-index: 1;

    background-color: rgba(0, 0, 0, 0.35);

    width: 100%;
    height: 100%;
    padding: 12px;
    padding-right: 12px;
    box-sizing: border-box;

    color: white;

    line-height: 1.6em;

    opacity: 0;
    transition: opacity 0.2s ease-in-out;
}

section.ratings h2 {
    font-size: 1.8em;

    flex: 0 0 100%;
    margin: 0;
    margin-bottom: -12px;
    margin-left: -12px;
    padding: 18px 12px 12px;

    background-color: var(--main-bg-color);
    position: sticky;
    top: 0px;

    z-index: 3;
}

div.rating h3,
div.rating h4 {
    margin: 0;
    padding: 0;

    margin-bottom: 6px;

    line-clamp: 2;
}

div.rating h3 {
    font-weight: bold;
}

div.rating h4 {
    font-weight: normal;
}

div.rating aside p {
    margin: 12px 0;
    font-size: 2.25em;

    display: block;
}

@media (max-width: 768px) {
    section.ratings {
        gap: 12px;
    }

    div.rating {
        width: calc(50vw - 24px - 8px);
        height: calc(50vw - 24px - 8px);
    }

    div.rating aside {
        padding: 6px;
        padding-right: 6px;
    }

    div.rating h3,
    div.rating h4 {
        font-size: 1em;
        line-height: 1.2em;
        margin-bottom: 3px;
    }

    div.rating aside p {
        font-size: 1.6em;
    }
}

@media (prefers-color-scheme: dark) {
    :root {
        --main-bg-color: black;
    }

    body {
        color: white;
    }

    div.rating aside {
        background-color: rgba(0, 0, 0, 0.25);
    }

    div.rating {
        box-shadow: none;
        overflow: visible;
    }

    div.rating img, div.rating aside {
        border-radius: 12px;
    }

    div.rating img.rating-bg {
        filter: brightness(1.5) blur(6px) saturate(3);
        opacity: 0.8;
        z-index: -2;
    }
}

